--- a/style.css
+++ b/style.css
@@ -59,3 +59,4 @@
 <button class="subscribe-button">SUBSCRIBE</button>
 <button class="join-button">JION</button>
 <button class="Tweet-button">Tweet</button>
+</style>
